--- a/New DTAPP/Views/Transfers/Index.cshtml
+++ b/New DTAPP/Views/Transfers/Index.cshtml
@@ -3,7 +3,7 @@
 @using X.PagedList.Mvc.Core
 @using X.PagedList.Web
 
-@model IPagedList<New_DTAPP.Models.TransferModel>
+@model Tuple<IPagedList<New_DTAPP.Models.TransferModel>, IList<New_DTAPP.Models.SpillModel>>
 
 @{
     ViewData["Title"] = "Data Transfer Requests";
@@ -603,7 +603,7 @@
                 </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+@foreach (var item in Model.Item1) {
         <tr>
             <td>
                @Html.DisplayFor(modelItem => item.RequestCreatedAt)
@@ -650,12 +650,63 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.SpillOccurred)
-                @if (item.SpillOccurred && item.SpillId.HasValue)
+                @if (User.IsInRole(Admin))
                 {
-                    <a target="_blank" asp-controller="Spills" asp-action="Details" asp-route-id="@item.Spill!.SpillId"><img src="~/images/box-arrow-up-right.svg" alt="Link to Spill" height="20" width="20" title="View Spill" style="margin-left: 25px;" /></a>
-                }
-                else if (item.SpillOccurred && !item.SpillId.HasValue) {
-                    <a target="_blank" asp-controller="Spills" asp-action="Create" asp-route-transferId="@item.TransferId"><img src="~/images/Add.png" alt="Create a Spill" height="20" width="20" title="Create Spill" style="margin-left: 25px;" /></a>
+                    @if (item.SpillOccurred && item.SpillId.HasValue)
+                    {
+                        <a target="_blank" asp-controller="Spills" asp-action="Details" asp-route-id="@item.Spill!.SpillId"><img src="~/images/box-arrow-up-right.svg" alt="Link to Spill" height="20" width="20" title="View Spill" style="margin-left: 25px;" /></a>
+                    }
+                    else if (item.SpillOccurred && !item.SpillId.HasValue) {
+                        var isSpillExist = false;
+                        List<SpillModel> Spills = new List<SpillModel>();
+                        @foreach (var item2 in Model.Item2) {
+                            if (item.TransferId == item2.TransferId) {
+                                isSpillExist = true;
+                                Spills.Add(item2);
+                            }
+                        }
+                        if (isSpillExist) {
+                            if (Spills.Count > 1) {
+                                <!-- Button trigger modal -->
+                                <a style="cursor: pointer;" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+                                    <img src="~/images/Sync.svg" alt="Link Spill" height="20" width="20" title="Link Spill" style="margin-left: 25px;" />
+                                </a>
+                                <!-- Modal -->
+                                <div class="modal fade" id="staticBackdrop" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                                    <div class="modal-dialog modal-dialog-centered modal-dialog-scrollable">
+                                        <div class="modal-content">
+                                            <div class="modal-header">
+                                                <h1 class="modal-title fs-5">Link Spill to Transfer</h1>
+                                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                                            </div>
+                                            <div class="modal-body text-center" style="max-height: 250px;">
+                                                <h6>Choose an existing Spill to link to the transfer.</h6>
+                                                @foreach (var spill in Spills)
+                                                {
+                                                    <a title="SpillId: @spill.SpillId" class="btn btn-primary m-1" target="_blank" asp-controller="Spills" asp-action="Edit" asp-route-id="@spill.SpillId" asp-route-transferId="@item.TransferId">
+                                                        [@spill.NatureOfSpill]
+                                                    </a>
+                                                }
+                                            </div>
+                                            <div class="modal-footer">
+                                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            }
+                            else {
+                                <a target="_blank" asp-controller="Spills" asp-action="Edit" asp-route-id="@Spills[0].SpillId" asp-route-transferId="@item.TransferId">
+                                    <img src="~/images/Sync.svg" alt="Link Spill" height="20" width="20" title="Link Spill" style="margin-left: 25px;" />
+                                </a>
+                            }
+                        }
+                        else {
+                            <a target="_blank" asp-controller="Spills" asp-action="Create" asp-route-transferId="@item.TransferId">
+                                <img src="~/images/Add.png" alt="Create a Spill" height="20" width="20" title="Create Spill" style="margin-left: 25px;" />
+                            </a>
+                        }
+                    }
                 }
             </td>
                 
@@ -668,7 +719,7 @@
             <td>
                 <a asp-action="Edit" asp-route-id="@item.TransferId"><img src="~/images/Edit.png" height="20" width="20" title="Edit" /></a>
                 <a asp-action="Details" asp-route-id="@item.TransferId"><img src="~/images/Details.png" height="20" width="20" title="Details" /></a>
-                @if (User.IsInRole(Admin))
+                @if (User.IsInRole(Admin) || (User.IsInRole(Supervisor)))
                 { 
                     <a asp-action="Delete" asp-route-id="@item.TransferId"><img src="~/images/Delete.png" height="20" width="20" title="Delete" /></a>
                 } 
@@ -677,7 +728,7 @@
 }
     </tbody>
 </table>
-    @Html.PagedListPager(Model, page => Url.Action("Index", new { page, sortOrder = ViewBag.SortOrder, selectedUnit = ViewBag.SelectedUnit, 
+    @Html.PagedListPager(Model.Item1, page => Url.Action("Index", new { page, sortOrder = ViewBag.SortOrder, selectedUnit = ViewBag.SelectedUnit, 
                                                                     raisedAfter = ViewBag.RaisedAfter,raisedBefore = ViewBag.RaisedBefore,
                                                                     selectedCompletedUser = ViewBag.SelectedCompletedUser, filterSpillOccurred = @ViewBag.FilterSpillOccurred,
                                                                     filterTransferDenied = @ViewBag.FilterTransferDenied, selectedOrigSystem = ViewBag.SelectedOrigSystem,
