Removed Delete function on SpillStatuses view

--- a/New DTAPP/Views/SpillStatuses/Index.cshtml
+++ b/New DTAPP/Views/SpillStatuses/Index.cshtml
@@ -34,7 +34,7 @@
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.SpillStatusId">Edit</a> |
                     <a asp-action="Details" asp-route-id="@item.SpillStatusId">Details</a>
-                    <a asp-action="Delete" asp-route-id="@item.SpillStatusId">Delete</a>
+                    @* <a asp-action="Delete" asp-route-id="@item.SpillStatusId">Delete</a> *@
                 </td>
             </tr>
         }
