--- a/New DTAPP/Views/SpillStatuses/Delete.cshtml
+++ b/New DTAPP/Views/SpillStatuses/Delete.cshtml
@@ -27,7 +27,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="SpillStatusId" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        @* <input type="submit" value="Delete" class="btn btn-danger" /> | *@
         <a class="btn btn-primary" asp-action="Index">Back</a>
     </form>
 </div>
