--- a/New DTAPP/Views/Spills/Create.cshtml
+++ b/New DTAPP/Views/Spills/Create.cshtml
@@ -13,7 +13,7 @@
        <div class="col-5">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="mb-3">
-                <label class="form-label">Transfer Request <span class="text-danger fw-bold">*</span></label>
+                <label class="form-label">Transfer Request</label>
 
                 @if (Model.TransferId != 0)
                 {
